настроили шапку профиля

--- a/index (8).html
+++ b/index (8).html
@@ -6,26 +6,27 @@
     <title>Правильное питание</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/styles.css">
-    <style>
-    
-    </style>
 </head>
 <body class="page">
-    <header class="header container" style="width: 200px;" id="header"> 
+<header class="header container">
+    <a class="header__logo-wrap" href="index (8).html">
         <img class="header__logo" src="images/дерево.png" alt="логотип" width="50" height="50">
         <h1 class="header__title">ЭкоГурман</h1>
+    </a>
+    <div class="header__buttons">
         <button class="header__button button" href="login.html">вход</button>
-        <button class="header__button button" href="registration.html">регистрация</button>
-        <nav class="header__menu">
-            <ul class="menu">
-                <li class="menu__item menu__item--active"><a class="menu__link" href="index (8).html">главная</a></li>
-                <li class="menu__item"><a class="menu__link" href="#">рецепты</a></li>
-                <li class="menu__item"><a class="menu__link" href="#">блог</a></li>
-                <li class="menu__item"><a class="menu__link" href="#">план питания</a></li>
-                <li class="menu__item"><a class="menu__link" href="#">форум</a></li>
-                <li class="menu__item"><a class="menu__link" href="#">личный кабинет</a></li>
-            </ul>
-        </nav>
+       <button class="header__button button" href="registration.html">регистрация</button>
+    </div>
+    <nav class="header__menu">
+        <ul class="menu">
+            <li class="menu__item"><a class="menu__link" href="#">главная</a></li>
+            <li class="menu__item"><a class="menu__link" href="#">рецепты</a></li>
+            <li class="menu__item"><a class="menu__link" href="#">блог</a></li>
+            <li class="menu__item"><a class="menu__link" href="#">план питания</a></li>
+            <li class="menu__item"><a class="menu__link" href="#">форум</a></li>
+            <li class="menu__item"><a class="menu__link" href="#">личный кабинет</a></li>
+        </ul>
+    </nav>
     </header>
     <div class="search">
         <h2 class="search__title"> Поиск рецептов</h2>
